feedback, code and documentation updated
Methods normalize_counts, fill_counts and count_time, are no longer requiring a df with a datetime index

--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -1,8 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "41b67b16-ade4-4021-a716-1e66960314ef",
+   "cell_type": "markdown",
+   "id": "d290cd93-ea1d-478a-808d-128598b8d4af",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -32,13 +32,21 @@
     "[Download the following template](https://github.com/soilwater/crnpy/blob/main/docs/examples/calibration/template.xlsx) spreadsheet for collecting soil samples data:\n",
     "\n",
     "<img src=\"../../../img/template.png\" style=\"max-width:500px\">\n"
-   ],
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "130e6b13",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Importing required libraries\n",
@@ -47,15 +55,14 @@
     "import numpy as np\n",
     "from crnpy import crnpy\n",
     "\n",
-    "# Import dataframes\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "# Import dataframes \n",
+    "\n",
+    "# Load the soil samples data using pandas\n",
+    "df_soil = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/soil_data.csv\")\n",
+    "df_station = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/station_data.csv\", skiprows=[0,2,3])\n",
+    "\n",
+    "# Load the station data"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,234 +75,23 @@
     "\n",
     "### Field average\n",
     "\n",
-    "Load the soil samples data using pandas, and using the function [`nrad_weight()`](../../../reference/#crnpy.crnpy.nrad_weight) the weights corresponding to each soil sample will be computed considering air-humidity, sample depth, distance from station and bulk density."
+    "Using the function [`nrad_weight()`](../../../reference/#crnpy.crnpy.nrad_weight) the weights corresponding to each soil sample will be computed considering air-humidity, sample depth, distance from station and bulk density."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d487ec99-97ff-46cf-aabc-b615e13c2f98",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>field</th>\n",
-       "      <th>date</th>\n",
-       "      <th>core_number</th>\n",
-       "      <th>distance_from_station</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>top_depth</th>\n",
-       "      <th>bottom_depth</th>\n",
-       "      <th>core_diameter</th>\n",
-       "      <th>wet_mass_with_bag</th>\n",
-       "      <th>...</th>\n",
-       "      <th>can_number</th>\n",
-       "      <th>mass_empty_can</th>\n",
-       "      <th>wet_mass_with_can</th>\n",
-       "      <th>dry_mass_with_can</th>\n",
-       "      <th>mass_water</th>\n",
-       "      <th>theta_g</th>\n",
-       "      <th>volume</th>\n",
-       "      <th>bulk_density</th>\n",
-       "      <th>theta_v</th>\n",
-       "      <th>Observation</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Flickner</td>\n",
-       "      <td>22-Oct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>N38.23459</td>\n",
-       "      <td>W97.57101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>30.49</td>\n",
-       "      <td>45.31</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>52.10</td>\n",
-       "      <td>92.03</td>\n",
-       "      <td>85.31</td>\n",
-       "      <td>6.72</td>\n",
-       "      <td>0.202</td>\n",
-       "      <td>36.514864</td>\n",
-       "      <td>0.909</td>\n",
-       "      <td>0.184403</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Flickner</td>\n",
-       "      <td>22-Oct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>N38.23459</td>\n",
-       "      <td>W97.57101</td>\n",
-       "      <td>5</td>\n",
-       "      <td>10</td>\n",
-       "      <td>30.49</td>\n",
-       "      <td>69.53</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>51.85</td>\n",
-       "      <td>115.97</td>\n",
-       "      <td>103.85</td>\n",
-       "      <td>12.12</td>\n",
-       "      <td>0.233</td>\n",
-       "      <td>36.514864</td>\n",
-       "      <td>1.424</td>\n",
-       "      <td>0.332585</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Flickner</td>\n",
-       "      <td>22-Oct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>N38.23459</td>\n",
-       "      <td>W97.57101</td>\n",
-       "      <td>10</td>\n",
-       "      <td>25</td>\n",
-       "      <td>30.49</td>\n",
-       "      <td>214.90</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>51.56</td>\n",
-       "      <td>260.97</td>\n",
-       "      <td>219.77</td>\n",
-       "      <td>41.20</td>\n",
-       "      <td>0.245</td>\n",
-       "      <td>109.544592</td>\n",
-       "      <td>1.536</td>\n",
-       "      <td>0.376856</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Flickner</td>\n",
-       "      <td>22-Oct</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>N38.23459</td>\n",
-       "      <td>W97.57101</td>\n",
-       "      <td>25</td>\n",
-       "      <td>40</td>\n",
-       "      <td>30.49</td>\n",
-       "      <td>217.52</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>52.35</td>\n",
-       "      <td>264.46</td>\n",
-       "      <td>222.23</td>\n",
-       "      <td>42.23</td>\n",
-       "      <td>0.249</td>\n",
-       "      <td>109.544592</td>\n",
-       "      <td>1.551</td>\n",
-       "      <td>0.386278</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Flickner</td>\n",
-       "      <td>22-Oct</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>N38.23464</td>\n",
-       "      <td>W97.57101</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>30.49</td>\n",
-       "      <td>45.92</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>52.15</td>\n",
-       "      <td>92.59</td>\n",
-       "      <td>85.93</td>\n",
-       "      <td>6.66</td>\n",
-       "      <td>0.197</td>\n",
-       "      <td>36.514864</td>\n",
-       "      <td>0.925</td>\n",
-       "      <td>0.182757</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      field    date  core_number  distance_from_station   latitude  longitude   \n",
-       "0  Flickner  22-Oct            1                      5  N38.23459  W97.57101  \\\n",
-       "1  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
-       "2  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
-       "3  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
-       "4  Flickner  22-Oct            2                      5  N38.23464  W97.57101   \n",
-       "\n",
-       "   top_depth  bottom_depth  core_diameter  wet_mass_with_bag  ...  can_number   \n",
-       "0          0             5          30.49              45.31  ...           1  \\\n",
-       "1          5            10          30.49              69.53  ...           2   \n",
-       "2         10            25          30.49             214.90  ...           3   \n",
-       "3         25            40          30.49             217.52  ...           4   \n",
-       "4          0             5          30.49              45.92  ...           5   \n",
-       "\n",
-       "   mass_empty_can  wet_mass_with_can  dry_mass_with_can  mass_water  theta_g   \n",
-       "0           52.10              92.03              85.31        6.72    0.202  \\\n",
-       "1           51.85             115.97             103.85       12.12    0.233   \n",
-       "2           51.56             260.97             219.77       41.20    0.245   \n",
-       "3           52.35             264.46             222.23       42.23    0.249   \n",
-       "4           52.15              92.59              85.93        6.66    0.197   \n",
-       "\n",
-       "       volume  bulk_density   theta_v  Observation  \n",
-       "0   36.514864         0.909  0.184403          NaN  \n",
-       "1   36.514864         1.424  0.332585          NaN  \n",
-       "2  109.544592         1.536  0.376856          NaN  \n",
-       "3  109.544592         1.551  0.386278          NaN  \n",
-       "4   36.514864         0.925  0.182757          NaN  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Import the example dataset\n",
-    "df_soil = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/soil_data.csv\")\n",
-    "df_soil.head()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "616bfdf4-fd36-40d0-8fa5-14e792ee9e5c",
    "metadata": {},
    "source": [
-    "Loading station data is necessary to calculate the absolute humidty from temperature an relative humidity data with [`estimate_abs_humidity()`](../../../reference/#crnpy.crnpy.estimate_abs_humidity)."
+    "Station data is used to calculate the absolute humidty from temperature an relative humidity data with [`estimate_abs_humidity()`](../../../reference/#crnpy.crnpy.estimate_abs_humidity)."
    ]
   },
   {
@@ -313,18 +109,23 @@
     }
    ],
    "source": [
-    "df_station = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/station_data.csv\", skiprows=[0,2,3])\n",
-    "\n",
     "#  Parse dates\n",
     "df_station['TIMESTAMP'] = pd.to_datetime(df_station['TIMESTAMP'])\n",
     "\n",
-    "# Define station deployment data\n",
-    "throw Excpetion()\n",
-    "# Define samplinf_start_Date and sampling end date\n",
+    "# Define dates\n",
+    "deployment_date = df_station['TIMESTAMP'].iloc[0]\n",
+    "# Soil sampling timestamp\n",
+    "calibration_start = pd.to_datetime(\"2021-10-22 08:00\")\n",
+    "calibration_end = pd.to_datetime(\"2021-10-22 16:00\")\n",
+    "\n",
     "\n",
     "# Filter data matching the sampling date\n",
-    "df_station_calib = df_station[(df_station['TIMESTAMP'] > pd.to_datetime(\"2021-10-22 08:00\")) & (df_station['TIMESTAMP'] < pd.to_datetime(\"2021-10-22 16:00\"))].copy()\n",
+    "df_station_calib = df_station[(df_station['TIMESTAMP'] > calibration_start) & (df_station['TIMESTAMP'] < calibration_end)].copy()\n",
+    "\n",
+    "#Calculate absolute humidity\n",
     "df_station_calib['abs_h'] = crnpy.estimate_abs_humidity(df_station_calib['relative_humidity_Avg'], df_station_calib['air_temperature_Avg'])\n",
+    "\n",
+    "# Compute the weights of each sample for the field average (https://en.wikipedia.org/wiki/Weighted_arithmetic_mean)\n",
     "nrad_weights = crnpy.nrad_weight(df_station_calib['abs_h'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'])\n",
     "\n",
     "field_theta_v = np.sum(df_soil['theta_v']*nrad_weights)\n",
@@ -670,12 +471,12 @@
    "source": [
     "# Find stations with cutoff rigidity similar to estimated by lat,lon, \n",
     "# filtering the time window from experiment setup to the end of the calibration\n",
-    "crnpy.find_neutron_detectors(crnpy.cutoff_rigidity(39.1, -96.6), start_date = df_station['TIMESTAMP'].iloc[0], end_date = df['TIMESTAMP'].iloc[-1])\n",
+    "crnpy.find_neutron_detectors(crnpy.cutoff_rigidity(39.1, -96.6), start_date = deployment_date, end_date = calibration_end)\n",
     "\n",
     "#Download data for one of the similar stations and add to df\n",
-    "incoming_neutrons = crnpy.get_incoming_neutron_flux(df_station['TIMESTAMP'].iloc[0], df['TIMESTAMP'].iloc[-1], station=\"DRBS\", utc_offset=-5)\n",
+    "incoming_neutrons = crnpy.get_incoming_neutron_flux(deployment_date, calibration_end, station=\"DRBS\", utc_offset=-5)\n",
     "df['incoming_flux']=crnpy.interpolate_incoming_flux(incoming_neutrons, timestamps=df['TIMESTAMP'])\n",
-    "ref_incoming_flux = incoming_neutrons.iloc[0]"
+    "ref_incoming_flux = incoming_neutrons.iloc[0]\n"
    ]
   },
   {
@@ -708,7 +509,8 @@
     "df[['pressure', 'RH', 'T']] = crnpy.fill_missing_atm(df[['barometric_pressure_Avg', 'relative_humidity_Avg', 'air_temperature_Avg']])\n",
     "# Correct count by atmospheric variables and incoming flux\n",
     "df['total_counts'] = crnpy.fill_counts(df['total_counts'])\n",
-    "df['corrected'] = crnpy.atm_correction(df['total_counts'], pressure=df['pressure'], humidity=df['RH'], temp=df['T'], Pref=976, Aref=0, L=130, incoming_neutrons = df['incoming_flux'], incoming_Ref = ref_incoming_flux).dropna()"
+    "df['corrected'] = crnpy.atm_correction(df['total_counts'], pressure=df['pressure'], humidity=df['RH'], temp=df['T'], Pref=976, Aref=0, \n",
+    "                                       L=130, incoming_neutrons = df['incoming_flux'], incoming_Ref = ref_incoming_flux).dropna()\n"
    ]
   },
   {
@@ -749,23 +551,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The solved value for N0 is: [2637.]\n"
+      "The solved value for N0 is: 2637\n"
      ]
     }
    ],
    "source": [
     "# Define the function for which we want to find the roots\n",
-    "def func(N0):\n",
-    "    return crnpy.counts_to_vwc(df['corrected'].mean(), N0, bulk_density=field_bulk_density, Wlat=0.03, Wsoc=0.01) - field_theta_v\n",
+    "VWC_func = lambda N0 : crnpy.counts_to_vwc(df['corrected'].mean(), N0, bulk_density=field_bulk_density, Wlat=0.03, Wsoc=0.01) - field_theta_v\n",
     "\n",
     "# Make an initial guess for N0\n",
     "N0_initial_guess = 1000\n",
     "\n",
     "# Find the root\n",
-    "sol = root(func, N0_initial_guess)\n",
+    "sol = int(root(VWC_func, N0_initial_guess).x)\n",
     "\n",
     "# Print the solution\n",
-    "print(f\"The solved value for N0 is: {sol.x.round()}\")"
+    "print(f\"The solved value for N0 is: {sol}\")\n"
    ]
   },
   {
