--- a/docs/examples/rover/Hydroinnova_rover_example.ipynb
+++ b/docs/examples/rover/Hydroinnova_rover_example.ipynb
@@ -25,8 +25,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from crnpy import crnpy\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -191,13 +190,14 @@
    ],
    "source": [
     "# Sample dataset\n",
+    "filepath = \"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/rover/gypsum_transect_01_may_2018.KSU\"\n",
     "col_names = 'RecordNum,Date Time(UTC),PTB110_mb,P4_mb,P1_mb,T1_C,RH1,T_CS215,RH_CS215,Vbat,N1Cts,N2Cts,N3Cts,N4Cts,N5Cts,N6Cts,N7Cts,N8Cts,N1ETsec,N3ETsec,N5ETsec,N7ETsec,N1T(C),N1RH,N5T(C),N5RH,GpsUTC,LatDec,LongDec,Alt,Qual,NumSats,HDOP,Speed_kmh,COG,SpeedQuality,strDate'.split(',')\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/rover/gypsum_transect_01_may_2018.KSU', skiprows=20, names=col_names)\n",
+    "\n",
+    "df = pd.read_csv(filepath, skiprows=20, names=col_names)\n",
     "df['LongDec'] = df['LongDec'] * -1 # Raw data is in absolute values\n",
     "\n",
     "# Parse timestamps and set as index\n",
     "df['timestamp'] = pd.to_datetime(df['Date Time(UTC)'])\n",
-    "df.set_index(df['timestamp'], inplace=True)\n",
     "\n",
     "# Remove rows with missing coordinates\n",
     "df['LatDec'].replace(0.0, np.nan, inplace=True)\n",
@@ -239,9 +239,9 @@
     "df['x'],df['y'] = crnpy.latlon_to_utm(df['LatDec'], df['LongDec'], 14, missing_values=0.0)\n",
     "\n",
     "# Create figure of survey points\n",
-    "plt.figure(figsize=(5,5))\n",
+    "plt.figure(figsize = (5,5))\n",
     "plt.scatter(df['x'], df['y'], marker='o', edgecolor='k', facecolor='w')\n",
-    "plt.ticklabel_format(scilimits=(-5,5))\n",
+    "plt.ticklabel_format(scilimits = (-5,5))\n",
     "plt.xlabel('Easting')\n",
     "plt.ylabel('Northing')\n",
     "plt.show()\n"
@@ -272,7 +272,7 @@
     "                           count_time=60, count_times=df[cont_times_col])\n",
     "\n",
     "# Compute total neutron counts\n",
-    "df['total_counts'] = crnpy.compute_total_raw_counts(df[counts_colums])"
+    "df['total_counts'] = crnpy.compute_total_raw_counts(df[counts_colums])\n"
    ]
   },
   {
@@ -308,11 +308,16 @@
     }
    ],
    "source": [
-    "#Find stations with cutoff rigidity similar to estimated by lat,lon\n",
-    "crnpy.find_neutron_detectors(crnpy.cutoff_rigidity(df['LatDec'][0], df['LongDec'][0]), start_date=df.iloc[0]['timestamp'], end_date=df.iloc[-1]['timestamp'])\n",
+    "start_date = df.iloc[0]['timestamp']\n",
+    "end_date = df.iloc[-1]['timestamp']\n",
     "\n",
-    "#Download data for one of the similar stations and add to df\n",
-    "incoming_neutrons = crnpy.get_incoming_neutron_flux(start_date=df.iloc[0]['timestamp'], end_date=df.iloc[-1]['timestamp'], station=\"NEWK\", utc_offset=-5, expand_window=2)"
+    "#Find stations with cutoff rigidity similar to estimated by lat,lon\n",
+    "crnpy.find_neutron_detectors(crnpy.cutoff_rigidity(df['LatDec'][0], df['LongDec'][0]), \n",
+    "                             start_date=start_date, end_date=end_date)\n",
+    "\n",
+    "#Download data for one of the similar stations and add to df, with UTC offset for CST, and 2 extra hours in the dataset ends.\n",
+    "incoming_neutrons = crnpy.get_incoming_neutron_flux(start_date=start_date, end_date=end_date, station=\"NEWK\",\n",
+    "                                                    utc_offset=-5, expand_window=2)"
    ]
   },
   {
@@ -331,7 +336,7 @@
    "outputs": [],
    "source": [
     "# Interpolate incomming flux hourly to measured timestamps (~ every minute)\n",
-    "df['incoming_flux']=crnpy.interpolate_incoming_flux(incoming_neutrons, timestamps=df['timestamp']).values"
+    "df['incoming_flux'] = crnpy.interpolate_incoming_flux(incoming_neutrons, timestamps=df['timestamp']).values\n"
    ]
   },
   {
@@ -352,7 +357,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jperaza\\AppData\\Local\\anaconda3\\envs\\crnpy\\lib\\site-packages\\crnpy\\crnpy.py:366: UserWarning: Reference incoming neutron flux not provided. Using first value of incoming neutron flux.\n",
+      "C:\\Users\\jperaza\\AppData\\Local\\anaconda3\\envs\\crnpy\\lib\\site-packages\\crnpy\\crnpy.py:400: UserWarning: Reference incoming neutron flux not provided. Using first value of incoming neutron flux.\n",
       "  warnings.warn('Reference incoming neutron flux not provided. Using first value of incoming neutron flux.')\n"
      ]
     }
@@ -362,8 +367,9 @@
     "df[['PTB110_mb', 'RH_CS215', 'T_CS215']] = crnpy.fill_missing_atm(df[['PTB110_mb', 'RH_CS215', 'T_CS215']])\n",
     "\n",
     "# Correct count by atmospheric variables and incoming flux\n",
-    "df['corrected_counts']=crnpy.atm_correction(df['total_counts'], pressure=df['PTB110_mb'], humidity=df['RH_CS215'], temp=df['T_CS215'],\n",
-    "                                     Pref=df['PTB110_mb'].mean(), Aref=0, L=130, incoming_neutrons=df['incoming_flux'])"
+    "df['corrected_counts'] = crnpy.atm_correction(df['total_counts'], pressure=df['PTB110_mb'], humidity=df['RH_CS215'],\n",
+    "                                              temp=df['T_CS215'],Pref=df['PTB110_mb'].mean(), Aref=0, L=130,\n",
+    "                                              incoming_neutrons=df['incoming_flux'])\n"
    ]
   },
   {
@@ -388,17 +394,16 @@
     "                                        buffer= 800, method='median', rnd=True)\n",
     "\n",
     "# Estimate Soil Columetric Water Content\n",
-    "df['VWC']=crnpy.counts_to_vwc(df['corrected_smoothed'], N0=550, bulk_density=1.3, Wlat=0.03, Wsoc=0.01)\n",
+    "df['VWC'] = crnpy.counts_to_vwc(df['corrected_smoothed'], N0=550, bulk_density=1.3, Wlat=0.03, Wsoc=0.01)\n",
     "\n",
     "# Drop VWC NaN values before interpolating values\n",
-    "df = df.dropna(subset=['VWC'])\n",
+    "df = df.dropna(subset = ['VWC'])\n",
     "\n",
     "# Interpolate variable\n",
     "X_pred, Y_pred, Z_pred = crnpy.interpolate_2d(df['x'],\n",
     "                                        df['y'],\n",
     "                                        df['VWC'],\n",
-    "                                        dx=250, dy=250, method='cubic')\n",
-    "\n"
+    "                                        dx=250, dy=250, method='cubic')\n"
    ]
   },
   {
