--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "# Import dataframes \n",
     "\n",
-    "# Load the soil samples data using pandas\n",
+    "# Load the soil samples data and the CRNP dataset using pandas\n",
     "df_soil = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/soil_data.csv\")\n",
     "df_station = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/station_data.csv\", skiprows=[0,2,3])\n",
     "\n",
@@ -75,22 +75,7 @@
     "\n",
     "### Field average\n",
     "\n",
-    "Using the function [`nrad_weight()`](../../../reference/#crnpy.crnpy.nrad_weight) the weights corresponding to each soil sample will be computed considering air-humidity, sample depth, distance from station and bulk density."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d487ec99-97ff-46cf-aabc-b615e13c2f98",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "616bfdf4-fd36-40d0-8fa5-14e792ee9e5c",
-   "metadata": {},
-   "source": [
+    "Using the function [`nrad_weight()`](../../../reference/#crnpy.crnpy.nrad_weight) the weights corresponding to each soil sample will be computed considering air-humidity, sample depth, distance from station and bulk density.\n",
     "Station data is used to calculate the absolute humidty from temperature an relative humidity data with [`estimate_abs_humidity()`](../../../reference/#crnpy.crnpy.estimate_abs_humidity)."
    ]
   },
@@ -416,7 +401,7 @@
     "df = df_station_calib.copy()\n",
     "# Set timestamp as index\n",
     "df.set_index(df['TIMESTAMP'], inplace=True)\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
@@ -435,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['total_counts'] = crnpy.compute_total_raw_counts(df[['counts_1_Tot','counts_2_Tot']], nan_strategy='average')"
+    "df['total_counts'] = crnpy.compute_total_raw_counts(df[['counts_1_Tot','counts_2_Tot']], nan_strategy='average')\n"
    ]
   },
   {
@@ -443,7 +428,7 @@
    "id": "3477b8ce-46e0-4cfd-a3da-116b199d79dc",
    "metadata": {},
    "source": [
-    "### Incomming neutron flux\n",
+    "#### Incomming neutron flux\n",
     "Download the neutron flux for all the experiment, setting the reference value as the value when the station was deployed."
    ]
   },
@@ -471,7 +456,7 @@
    "source": [
     "# Find stations with cutoff rigidity similar to estimated by lat,lon, \n",
     "# filtering the time window from experiment setup to the end of the calibration\n",
-    "crnpy.find_neutron_detectors(crnpy.cutoff_rigidity(39.1, -96.6), start_date = deployment_date, end_date = calibration_end)\n",
+    "crnpy.find_neutron_monitor(crnpy.cutoff_rigidity(39.1, -96.6), start_date = deployment_date, end_date = calibration_end)\n",
     "\n",
     "#Download data for one of the similar stations and add to df\n",
     "incoming_neutrons = crnpy.get_incoming_neutron_flux(deployment_date, calibration_end, station=\"DRBS\", utc_offset=-5)\n",
@@ -502,6 +487,14 @@
       "No count time columns provided. Using timestamp index to compute count time.\n",
       "Using median count time as expected count time: 3600.0\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jperaza\\AppData\\Local\\anaconda3\\envs\\crnpy\\lib\\site-packages\\crnpy\\crnpy.py:471: UserWarning: Reference incoming neutron flux not provided. Using first value of incoming neutron flux.\n",
+      "  warnings.warn('Reference incoming neutron flux not provided. Using first value of incoming neutron flux.')\n"
+     ]
     }
    ],
    "source": [
@@ -509,8 +502,11 @@
     "df[['pressure', 'RH', 'T']] = crnpy.fill_missing_atm(df[['barometric_pressure_Avg', 'relative_humidity_Avg', 'air_temperature_Avg']])\n",
     "# Correct count by atmospheric variables and incoming flux\n",
     "df['total_counts'] = crnpy.fill_counts(df['total_counts'])\n",
-    "df['corrected'] = crnpy.atm_correction(df['total_counts'], pressure=df['pressure'], humidity=df['RH'], temp=df['T'], Pref=976, Aref=0, \n",
-    "                                       L=130, incoming_neutrons = df['incoming_flux'], incoming_Ref = ref_incoming_flux).dropna()\n"
+    "\n",
+    "# Correct count by atmospheric variables and incoming flux\n",
+    "df['corrected'] = crnpy.humidity_correction(df['total_counts'],humidity=df['RH'], temp=df['T'], Aref=0)\n",
+    "df['corrected'] = crnpy.pressure_correction(df['corrected'], pressure=df['pressure'], Pref=976, L=130)\n",
+    "df['corrected'] = crnpy.incoming_flux_correction(df['corrected'], incoming_neutrons=df['incoming_flux'])\n"
    ]
   },
   {
@@ -523,12 +519,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean corrected neutron count during sampling: 1540.0\n"
+      "Mean corrected neutron count during sampling: 1538.0\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Mean corrected neutron count during sampling: {df['corrected'].mean().round()}\")"
+    "print(f\"Mean corrected neutron count during sampling: {df['corrected'].mean().round()}\")\n"
    ]
   },
   {
@@ -551,7 +547,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The solved value for N0 is: 2637\n"
+      "The solved value for N0 is: 2633\n"
      ]
     }
    ],
