--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Field Volumetric Water content: 0.256\n"
+      "Field Volumetric Water content: 0.263\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
     "df_station_calib['abs_h'] = crnpy.estimate_abs_humidity(df_station_calib['relative_humidity_Avg'], df_station_calib['air_temperature_Avg'])\n",
     "\n",
     "# Compute the weights of each sample for the field average (https://en.wikipedia.org/wiki/Weighted_arithmetic_mean)\n",
-    "nrad_weights = crnpy.nrad_weight(df_station_calib['abs_h'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'])\n",
+    "nrad_weights = crnpy.nrad_weight(df_station_calib['abs_h'].mean(), df_soil['theta_v'], df_soil['distance_from_station'], (df_soil['bottom_depth']+df_soil['top_depth'])/2, rhob=df_soil['bulk_density'].mean())\n",
     "\n",
     "field_theta_v = np.sum(df_soil['theta_v']*nrad_weights)\n",
     "field_bulk_density = np.sum(df_soil['bulk_density']*nrad_weights)\n",
@@ -534,7 +534,7 @@
    "source": [
     "## Solving the equation for $N_0$\n",
     "\n",
-    "Previous steps estimated the a field volumetric water content of `0.256` and an average neutron count of `1540`. Using [scipy.optimize.root()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html) $N_0$ is estimated given the observed value of $\\theta_v$ and neutron counts."
+    "Previous steps estimated the a field volumetric water content of `0.256` and an average neutron count of `1538`. Using [scipy.optimize.root()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html) $N_0$ is estimated given the observed value of $\\theta_v$ and neutron counts."
    ]
   },
   {
@@ -547,7 +547,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The solved value for N0 is: 2633\n"
+      "The solved value for N0 is: 2636\n"
      ]
     }
    ],
