--- a/docs/examples/rover/Hydroinnova_rover_example.ipynb
+++ b/docs/examples/rover/Hydroinnova_rover_example.ipynb
@@ -351,7 +351,7 @@
    "id": "e8dd9c03-e131-411e-aae4-439cf801b27e",
    "metadata": {},
    "source": [
-    "#### Atmpsheric correction\n",
+    "#### Atmospheric correction\n",
     "\n",
     "NaN values in the atmospheric data are filled. The neutron counts are then corrected for atmospheric variables and the incoming neutron flux. Optionally it is possible to pass `incoming_Ref` parameter in [`atm_correction()`](../../../reference/#crnpy.crnpy.atm_correction) to fix a desired value as the reference incoming count for the reference station."
    ]
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "6e09f8aa-3a13-4c5d-9b2f-9976c778f2e7",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
     "# Drop VWC NaN values before interpolating values\n",
     "df = df.dropna(subset = ['VWC'])\n",
     "\n",
-    "# Interpolate variable\n",
+    "# Interpolate variable using IDW (https://en.wikipedia.org/wiki/Inverse_distance_weighting)\n",
     "X_pred, Y_pred, Z_pred = crnpy.interpolate_2d(df['x'],\n",
     "                                        df['y'],\n",
     "                                        df['VWC'],\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "2a595e5e-5ace-4db3-afc2-e11ca26fa0da",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "858a04a9-6c7a-457f-865d-58419d821054",
    "metadata": {},
    "outputs": [
@@ -491,14 +491,6 @@
     "plt.scatter(df['x'], df['y'], marker='o', edgecolor='k', facecolor='w')\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1080c830-2c61-47c1-890d-666e66158ac9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
