--- a/docs/examples/stationary/example_RDT_station.ipynb
+++ b/docs/examples/stationary/example_RDT_station.ipynb
@@ -19,10 +19,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from crnpy import crnpy\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -462,7 +463,7 @@
     "ax.set_title('Soil Moisture')\n",
     "\n",
     "# Show the plot\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -490,8 +491,11 @@
     }
    ],
    "source": [
-    "# Estimate the sensing depth\n",
-    "df['sensing_depth'] = crnpy.sensing_depth(df['VWC'], df['pressure'], df['pressure'].mean(), bulk_density=1.33, Wlat=crnpy.estimate_lattice_water(clay_content=0.35)/100, dist=0, method = \"Franz_2012\")\n",
+    "# Estimate lattice water (%) based on texture, and convert it to decimal.\n",
+    "lattice_water = crnpy.estimate_lattice_water(clay_content=0.35) / 100\n",
+    "\n",
+    "# Estimate sensing depth\n",
+    "df['sensing_depth'] = crnpy.sensing_depth(df['VWC'], df['pressure'], df['pressure'].mean(), bulk_density=1.33, Wlat=lattice_water, dist=0, method = \"Franz_2012\")\n",
     "print(f\"Average sensing depth: {df['sensing_depth'].mean().round(2)} cm\")\n"
    ]
   },
@@ -538,7 +542,7 @@
     "ax.set_title('Soil Water Storage')\n",
     "\n",
     "# Show the plot\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
